--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Personal Portfolio</title>
-	<link rel="stylesheet" href="C:\Users\63949\OneDrive\Desktop\FINAL PROJECT\style.css">
+	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/830b39c5c0.js" crossorigin="anonymous"></script>
 
 </head>
