--- a/index.html
+++ b/index.html
@@ -161,13 +161,12 @@
 				<p> <i class="fa-solid fa-paper-plane"></i>francisrosete5354@gmail.com</p>
 				<p> <i class="fa-solid fa-phone"></i> 09491904475</p>
 				<div class="social-icons">
-					<a href="https://web.facebook.com/francisemil.rosete"><i class="fa-brands fa-square-facebook"></i></a>
-					<a href="https://x.com/frosete_"><i class="fa-brands fa-square-x-twitter"></i></a>
-					<a href="https://www.instagram.com/frnkrst/"><i class="fa-brands fa-square-instagram"></i></a>
+					<a href="https://web.facebook.com"><i class="fa-brands fa-square-facebook"></i></a>
+					<a href="https://x.com"><i class="fa-brands fa-square-x-twitter"></i></a>
+					<a href="https://www.instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
 				</div>
 				<a href="images/my-cv.pdf" class="btn btn2" download> Download CV </a>
 			</div>
-			
 			
 		</div>
 		
@@ -216,7 +215,6 @@
 
 	}
 </script>
-
 
 
 </body>
